[package]
name = "cronback-cli"
# We maintain the CLI and rust-client versions independently from the workspace.
version = "0.1.0"
edition.workspace = true
authors.workspace = true
categories = ["command-line-utilities"]
keywords = ["cli"]
repository = "https://github.com/devtari-io/cronback"
homepage = "https://cronback.me"

[[bin]]
name = "cronback"
path = "src/main.rs"

[features]
default = []
admin = []

[dependencies]
cronback = { path = "../rust", version = "0.1.0" }
cronback-api-model = { path = "../../api-model", version = "0.1.0", features = [
  "client",
  "clap",
] }
clap = { version = "4", features = ["env", "derive", "wrap_help"] }
clap-stdin = { version = "0.2.0" }
colored = { version = "2.0" }
colored_json = { version = "3.2.0" }
serde_json = { workspace = true }
etcetera = { version = "0.8.0" }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio = { workspace = true, features = [
  "io-std",
  "io-util",
  "signal",
  "rt-multi-thread",
  "macros",
] }
anyhow = { version = "1.0.71" }
url = { version = "2.3.1" }
clap-verbosity-flag = { version = "2.0.1" }
env_logger = "0.10.0"
once_cell = { version = "1.17.1" }
dotenvy = "0.15"
async-trait = { workspace = true }
prettytable-rs = { version = "0.10.0" }
rprompt = "2.0"
spinners = "4.1"
