[package]
name = "cronback"
description = """\
  A client library for https://cronback.me service. \
  Cronback provides developers a reliable and flexible solution to schedule \
  one-time, recurring cron, and on-demand webhooks.
  """
version = "0.1.0"
edition.workspace = true
authors.workspace = true
categories = ["network-programming", "api-bindings"]
keywords = ["cron", "webhooks", "scheduler", "job", "periodic"]
repository = "https://github.com/devtari-io/cronback"
homepage = "https://cronback.me"

# We maintain the CLI and rust-client versions independently from the workspace.
[dependencies]
reqwest = { version = "0.11.18" }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { version = "2.3.1" }
once_cell = "1.17"
