[package]
name = "cronback-api-srv"
description = "API server for cronback backend"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[lib]
path = "lib.rs"

[dependencies]
# Internal Dependencies
cronback-api-model = { workspace = true, features = ["server"] }
dto = { workspace = true }
lib = { workspace = true }
proto = { workspace = true }

# Dependencies from workspace
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
metrics = { workspace = true }
rand = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["chrono_0_4", "json"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
tracing = { workspace = true }
ulid = { workspace = true }
once_cell = { workspace = true }

# Unique Dependencies
axum-extra = { version = "0.7", features = ["query"] }
names = { version = "0.14.0", default-features = false }
serde_path_to_error = "0.1.11"
sha2 = "0.10.6"
uuid = { version = "1.2.2", features = ["v4"] }
validator = { version = "0.16.0", features = ["derive"] }
hyper = "0.14.26"
regex = "1.9.1"
